--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -32,7 +32,7 @@
      
     
     <div class="presentation">
-        <p>Étudiante en 2ème année master « Développement lOgiciel des Systèmes d'Information », 
+        <p id="presentation">Étudiante en 2ème année master « Développement lOgiciel des Systèmes d'Information », 
             Diplômée en génie informatique avec des capacités de
             leadership éprouvées, aime prendre des initiatives et chercher de
             nouveaux défis. Passionnée d'ingénierie des données et de systèmes
@@ -78,7 +78,7 @@
     </section>
     <section>
         <div class="formation">
-            <h3>Formation</h3>
+            <h1>Formation</h1>
             <div>
                 <div>
                     <h3>2020 - 2021</h3>
@@ -157,9 +157,9 @@
     <section>
         <h1>Langues</h1>
         <div>
-            <h3>Francais</h3>
-            <h3>Anglais</h3>
-            <h3>Arabe</h3>
+            <h4>Francais</h4>
+            <h4>Anglais</h4>
+            <h4>Arabe</h4>
         </div>
     </section>
     </div>
