--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="css/responsive.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrap.com/font-awesome/4.4.0/css/fontawesome.min.css">
         <title>Mon CV</title>
@@ -15,14 +16,14 @@
 
     </head>
     <body>
-        <div id="wrapper">
+        <div itemscope itemtype="https://schema.org/Person" id="wrapper">
         <header>
-            <div id="image">
-                <img src="Avatar.jpg" sizes="40px">
+            <div id="image" itemprop="image">
+                <img src="Avatar.jpg">
             </div>
             <div id="info">
-            <h1>Yousra AHSAIEN</h1>
-            <h4>Étudiante en Master Développement lOgiciel des Systèmes d'Information à l'UBO</h4>
+            <h1 itemprop="name">Yousra AHSAIEN</h1>
+            <h4 itemprop="description">Étudiante en Master Développement lOgiciel des Systèmes d'Information à l'UBO</h4>
             <h4>13 novembre 1996</h4>
             <h4>yousra.ahsaien@gmail.com</h4>
             <h2></h2>
