--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -16,14 +16,14 @@
 
     </head>
     <body>
-        <div itemscope itemtype="https://schema.org/Person" id="wrapper">
+        <div id="wrapper">
         <header>
-            <div id="image" itemprop="image">
+            <div id="image">
                 <img src="Avatar.jpg">
             </div>
             <div id="info">
-            <h1 itemprop="name">Yousra AHSAIEN</h1>
-            <h4 itemprop="description">Étudiante en Master Développement lOgiciel des Systèmes d'Information à l'UBO</h4>
+            <h1>Yousra AHSAIEN</h1>
+            <h4>Étudiante en Master Développement lOgiciel des Systèmes d'Information à l'UBO</h4>
             <h4>13 novembre 1996</h4>
             <h4>yousra.ahsaien@gmail.com</h4>
             <h2></h2>
